testing psk-table

--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -49,7 +49,7 @@
     </psk-example>
 
     <psk-chapter title="Testing psk-table">
-        <psk-table>
+        <psk-table head="true" footer="true">
             This will be the header | Second column | Third|Fourth |Fifth| Ok, is enought, some will be empty
             asndlkas|asd;lka;slkdla;|alskdj;lskd|askldjalsd
             234234234234|234234234234|23423423423423|234234234|234234|234234|234234|234234|234234|232252352352352343324|456456|456456|456456
