testing code highligh

--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -1,5 +1,5 @@
 <psk-page title="psk-page-not-found">
-    <psk-tag>
+    <psk-tag language="html">
         <psk-page-not-found>
         </psk-page-not-found>
     </psk-tag>
@@ -30,18 +30,37 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-tag>
+        <psk-tag language="html">
             <psk-page-not-found base-path="/"></psk-page-not-found>
         </psk-tag>
-        <psk-tag>
+        <psk-tag language="html">
             <psk-page-not-found url-destination="/path/to/destination"></psk-page-not-found>
         </psk-tag>
-        <psk-tag>
+        <psk-tag language="html">
             <psk-page-not-found page-renderer="my-custom-page-renderer"></psk-page-not-found>
         </psk-tag>
-        <psk-tag>
+        <psk-tag language="html">
             <psk-page-not-found></psk-page-not-found>
         </psk-tag>
+        <psk-tag language="javascript">
+            const varName = someFunction(param1, param2);
+            someFuncProgCalls.map((el, index) => el + index * index + index / el)
+                             .filter(el => el % 2 === 0)
+                             .join(" *\^_^/*);
+        </psk-tag>
+      
+        <psk-tag language="json">
+            {
+              "key":"value",
+              "key":"value",
+              "key":"value",
+              "key":"value",
+              "key":"value",
+              "key":"value",
+              "key":"value"
+            }
+        </psk-tag>
+      
     </psk-chapter>
 
     <psk-example title="Usage Preview with the default page-renderer">
