--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -30,26 +30,26 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-tag language="html">
+        <psk-tag>
             <psk-page-not-found base-path="/"></psk-page-not-found>
         </psk-tag>
-        <psk-tag language="html">
+        <psk-tag>
             <psk-page-not-found url-destination="/path/to/destination"></psk-page-not-found>
         </psk-tag>
-        <psk-tag language="html">
+        <psk-tag>
             <psk-page-not-found page-renderer="my-custom-page-renderer"></psk-page-not-found>
         </psk-tag>
-        <psk-tag language="html">
+        <psk-tag>
             <psk-page-not-found></psk-page-not-found>
         </psk-tag>
-        <psk-tag language="javascript">
+        <psk-code language="javascript">
             const varName = someFunction(param1, param2);
             someFuncProgCalls.map((el, index) => el + index * index + index / el)
                              .filter(el => el % 2 === 0)
                              .join(" *\^_^/*);
-        </psk-tag>
+        </psk-code>
       
-        <psk-tag language="json">
+        <psk-code language="json">
             {
               "key":"value",
               "key":"value",
@@ -59,7 +59,7 @@
               "key":"value",
               "key":"value"
             }
-        </psk-tag>
+        </psk-code>
       
     </psk-chapter>
 
