--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -25,24 +25,24 @@
         <psk-page-not-found data-define-props="true" />
     </psk-property-descriptor>
 
-    <psk-chapter title="HTML Children1">
+    <psk-chapter title="..1. HTML Children1">
         <p>This component has no HTML children.</p>
-        <psk-chapter title="HTML Children2">
+        <psk-chapter title="..2. HTML Children2">
             <p>This component has no HTML children.</p>
         </psk-chapter>
-        <psk-chapter title="HTML Children3">
+        <psk-chapter title="..3. HTML Children3">
             <p>This component has no HTML children.</p>
         </psk-chapter>
-        <psk-chapter title="HTML Children4">
+        <psk-chapter title="..4. HTML Children4">
             <p>This component has no HTML children.</p>
-            <psk-chapter title="HTML Children5">
+            <psk-chapter title="..4.1. HTML Children5">
                 <p>This component has no HTML children.</p>
-                <psk-chapter title="HTML Children6">
+                <psk-chapter title="..4.1.1. HTML Children6">
                     <p>This component has no HTML children.</p>
-                    <psk-chapter title="HTML Children7">
+                    <psk-chapter title="..4.1.1.1. HTML Children7">
                         <p>This component has no HTML children.</p>
                     </psk-chapter>
-                    <psk-chapter title="HTML Children7">
+                    <psk-chapter title="..4.1.1.2. HTML Children7">
                         <p>This component has no HTML children.</p>
                     </psk-chapter>
                 </psk-chapter>
