--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -30,7 +30,7 @@
     </app-menu>
   </psk-event-descriptor>
 
-  <psk-controller-descriptor title="Supported Controllers">
+  <psk-controller-descriptor title="Supports Controllers">
     <app-menu data-define-controller="true">
     </app-menu>
   </psk-controller-descriptor>
