added controller-descriptor to index.html

--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -25,12 +25,7 @@
     </app-menu>
   </psk-property-descriptor>
 
-  <psk-event-descriptor title="Event Description">
-    <app-menu data-define-events="true">
-    </app-menu>
-  </psk-event-descriptor>
-
-  <psk-controller-descriptor title="Supports Controllers">
+  <psk-controller-descriptor title="Events that supports Controllers">
     <app-menu data-define-controller="true">
     </app-menu>
   </psk-controller-descriptor>
