--- a/pages/Components/psk-app-router/index.html
+++ b/pages/Components/psk-app-router/index.html
@@ -14,9 +14,10 @@
     <psk-property-descriptor title="Supported properties">
         <psk-app-router data-define-props="true" />
     </psk-property-descriptor>
-    <psk-event-descriptor title="Event Description">
-        <psk-app-router data-define-events="true" />
-    </psk-event-descriptor>
+
+    <psk-controller-descriptor title="Events that supports Controllers">
+        <psk-app-router data-define-controller="true" />
+    </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
