--- a/pages/Components/psk-list-feedbacks/index.html
+++ b/pages/Components/psk-list-feedbacks/index.html
@@ -25,9 +25,11 @@
     <psk-property-descriptor title="Supported properties">
         <psk-list-feedbacks data-define-props="true" />
     </psk-property-descriptor>
-    <psk-event-descriptor title="Event Description">
+
+    <psk-controller-descriptor title="Events that supports Controller">
         <psk-list-feedbacks data-define-events="true" />
-    </psk-event-descriptor>
+    </psk-controller-descriptor>
+
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
     </psk-chapter>
