--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -19,13 +19,10 @@
         <psk-pin-popup data-define-props="true" />
     </psk-property-descriptor>
 
-    <psk-event-descriptor title="Event Description">
-        <psk-pin-popup data-define-events="true" />
-    </psk-event-descriptor>
-    <!-- 
-    <psk-controller-descriptor>
+    
+    <psk-controller-descriptor title="Events that supports Controller">
         <psk-pin-popup data-define-controller="true" />
-    </psk-controller-descriptor> -->
+    </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
