--- a/pages/Components/psk-user-profile/index.html
+++ b/pages/Components/psk-user-profile/index.html
@@ -16,9 +16,11 @@
         <psk-user-profile data-define-props="true">
         </psk-user-profile>
     </psk-property-descriptor>
-    <psk-event-descriptor title="Event Description">
-        <psk-user-profile data-define-events="true" />
-    </psk-event-descriptor>
+
+    <psk-controller-descriptor title="Events that supports Controller">
+        <psk-user-profile data-define-controller="true" />
+    </psk-controller-descriptor>
+
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
     </psk-chapter>
