--- a/pages/Components/psk-wizard/index.html
+++ b/pages/Components/psk-wizard/index.html
@@ -21,6 +21,10 @@
         </psk-wizard>
     </psk-event-descriptor>
 
+    <psk-controller-descriptor title="Events that supports Controller">
+        <psk-wizard data-define-controller="true" />
+    </psk-controller-descriptor>
+
     <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
     </psk-chapter>
