--- a/pages/Components/psk-list-feedbacks/index.html
+++ b/pages/Components/psk-list-feedbacks/index.html
@@ -27,7 +27,7 @@
     </psk-property-descriptor>
 
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-list-feedbacks data-define-events="true" />
+        <psk-list-feedbacks data-define-controller="true" />
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
