--- a/pages/Components/psk-page-not-found/index.html
+++ b/pages/Components/psk-page-not-found/index.html
@@ -25,29 +25,8 @@
         <psk-page-not-found data-define-props="true" />
     </psk-property-descriptor>
 
-    <psk-chapter title="..1. HTML Children1">
+    <psk-chapter title="HTML Children">
         <p>This component has no HTML children.</p>
-        <psk-chapter title="..2. HTML Children2">
-            <p>This component has no HTML children.</p>
-        </psk-chapter>
-        <psk-chapter title="..3. HTML Children3">
-            <p>This component has no HTML children.</p>
-        </psk-chapter>
-        <psk-chapter title="..4. HTML Children4">
-            <p>This component has no HTML children.</p>
-            <psk-chapter title="..4.1. HTML Children5">
-                <p>This component has no HTML children.</p>
-                <psk-chapter title="..4.1.1. HTML Children6">
-                    <p>This component has no HTML children.</p>
-                    <psk-chapter title="..4.1.1.1. HTML Children7">
-                        <p>This component has no HTML children.</p>
-                    </psk-chapter>
-                    <psk-chapter title="..4.1.1.2. HTML Children7">
-                        <p>This component has no HTML children.</p>
-                    </psk-chapter>
-                </psk-chapter>
-            </psk-chapter>
-        </psk-chapter>
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
