--- a/pages/Components/app-menu/index.html
+++ b/pages/Components/app-menu/index.html
@@ -36,7 +36,8 @@
 
   <psk-chapter title="Code Example">
     <psk-tag>
-      <app-menu />
+      <app-menu>
+      </app-menu>
     </psk-tag>
   </psk-chapter>
 
