--- a/pages/Components/psk-attachments-list/index.html
+++ b/pages/Components/psk-attachments-list/index.html
@@ -8,11 +8,13 @@
 
     <psk-description>
         <p>This component is intended to display a list of files with the possibility to download them.</p>
-        <p>You can remove them only if you created a function that removes it and passing it to removeFileFromList property</p>
+        <p>You can remove them only if you created a function that removes it and passing it to removeFileFromList
+            property</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-attachments-list data-define-props="true" />
+        <psk-attachments-list data-define-props="true">
+        </psk-attachments-list>
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -21,7 +23,8 @@
 
     <psk-chapter title="Code Examples">
         <psk-tag>
-            <psk-attachments-list files="{name: file.txt , size: 5000, type: plain/text" />
+            <psk-attachments-list files="{name: file.txt , size: 5000, type: plain/text">
+            </psk-attachments-list>
         </psk-tag>
     </psk-chapter>
 </psk-page>
