--- a/pages/Components/psk-modal/index.html
+++ b/pages/Components/psk-modal/index.html
@@ -15,10 +15,12 @@
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-modal data-define-props="true" />
+        <psk-modal data-define-props="true">
+        </psk-modal>
     </psk-property-descriptor>
     <psk-event-descriptor title="Event Description">
-        <psk-modal data-define-events="true" />
+        <psk-modal data-define-events="true">
+        </psk-modal>
     </psk-event-descriptor>
 
     <psk-chapter title="HTML Children">
