--- a/pages/Components/psk-pin-popup/index.html
+++ b/pages/Components/psk-pin-popup/index.html
@@ -16,12 +16,14 @@
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-pin-popup data-define-props="true" />
+        <psk-pin-popup data-define-props="true">
+        </psk-pin-popup>
     </psk-property-descriptor>
 
-    
+
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-pin-popup data-define-controller="true" />
+        <psk-pin-popup data-define-controller="true">
+        </psk-pin-popup>
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -34,7 +36,7 @@
         </psk-tag>
     </psk-chapter>
 
-    <psk-chapter title= "Live Example">
+    <psk-chapter title="Live Example">
         <psk-pin-popup opened="true"></psk-pin-popup>
         <p>You can see this pin-pop-up example everytime you enter or refresh this page!</p>
     </psk-chapter>
