--- a/pages/Components/psk-ui-loader/index.html
+++ b/pages/Components/psk-ui-loader/index.html
@@ -16,7 +16,8 @@
         <p>By default, the loader will be hidden.</p>
     </psk-description>
     <psk-property-descriptor title="Supported properties">
-        <psk-ui-loader data-define-props="true" />
+        <psk-ui-loader data-define-props="true">
+        </psk-ui-loader>
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -25,10 +26,12 @@
 
     <psk-chapter title="Code Example">
         <psk-tag>
-            <psk-ui-loader shouldBeRendered="true" />
+            <psk-ui-loader shouldBeRendered="true">
+            </psk-ui-loader>
         </psk-tag>
     </psk-chapter>
     <psk-example title="Live Example">
-        <psk-ui-loader shouldBeRendered="true" />
+        <psk-ui-loader shouldBeRendered="true">
+        </psk-ui-loader>
     </psk-example>
 </psk-page>
