--- a/pages/Components/psk-user-profile/index.html
+++ b/pages/Components/psk-user-profile/index.html
@@ -18,7 +18,8 @@
     </psk-property-descriptor>
 
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-user-profile data-define-controller="true" />
+        <psk-user-profile data-define-controller="true">
+        </psk-user-profile>
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -28,10 +29,12 @@
     <psk-chapter title="Code Example">
         <psk-tag>
             <psk-user-profile
-                userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}" />
+                userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}">
+            </psk-user-profile>
         </psk-tag>
     </psk-chapter>
     <psk-chapter title="Default Example">
-        <psk-user-profile />
+        <psk-user-profile>
+        </psk-user-profile>
     </psk-chapter>
 </psk-page>
