--- a/pages/Components/psk-wizard/index.html
+++ b/pages/Components/psk-wizard/index.html
@@ -22,7 +22,8 @@
     </psk-event-descriptor>
 
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-wizard data-define-controller="true" />
+        <psk-wizard data-define-controller="true">
+        </psk-wizard>
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -31,10 +32,12 @@
 
     <psk-chapter title="Code Example">
         <psk-tag>
-            <psk-wizard />
+            <psk-wizard>
+            </psk-wizard>
         </psk-tag>
     </psk-chapter>
     <psk-chapter title="Wizard Example">
-        <psk-wizard />
+        <psk-wizard>
+        </psk-wizard>
     </psk-chapter>
 </psk-page>
