--- a/pages/Components/psk-file-chooser/index.html
+++ b/pages/Components/psk-file-chooser/index.html
@@ -6,11 +6,13 @@
     <psk-toc title="PSK Files Chooser"></psk-toc>
 
     <psk-description>
-        This component allows the user to select multiple files from his device to load them into the application providing him a customizable way to do this.
+        This component allows the user to select multiple files from his device to load them into the application
+        providing him a customizable way to do this.
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
-        <psk-files-chooser data-define-props="true" />
+        <psk-files-chooser data-define-props="true">
+        </psk-files-chooser>
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -19,7 +21,8 @@
 
     <psk-chapter title="Code Examples">
         <psk-tag>
-            <psk-files-chooser label="Select files" accept="png" />
+            <psk-files-chooser label="Select files" accept="png">
+            </psk-files-chooser>
         </psk-tag>
     </psk-chapter>
 </psk-page>
