--- a/pages/Components/psk-list-feedbacks/index.html
+++ b/pages/Components/psk-list-feedbacks/index.html
@@ -7,11 +7,14 @@
     <psk-toc title="PSK - Feedback Pool "></psk-toc>
 
     <psk-description>
-        <p>This componentent is intended to be used as a notification pool in order to keep the user experince more to his liking.</p>
+        <p>This componentent is intended to be used as a notification pool in order to keep the user experince more to
+            his liking.</p>
         <p>In order for everything to work smoothly this component uses a pool of
             <code><span class="nt">&lt;psk-ui-toast/&gt;</span></code> and
             <code><span class="nt">&lt;psk-ui-alert/&gt;</span></code>.</p>
-        <p>For beggining you could send a <code>message</code> or an array of <code>message</code> which are separated in distinctive notifications(the <code>message</code> is not mandatory) and a <code>name</code> for each message(again,this is not mandatory)
+        <p>For beggining you could send a <code>message</code> or an array of <code>message</code> which are separated
+            in distinctive notifications(the <code>message</code> is not mandatory) and a <code>name</code> for each
+            message(again,this is not mandatory)
             and the type of feedback you want to show.</p>
         <psk-tag>
             this.showFeedbackHandler.emit({ message: 'Example', name: 'Example-Name', type: 'toast' })
@@ -19,15 +22,18 @@
         <p>The alerts are stackable and they will only show a specific number of them(only on toast type notifications).
         </p>
         <p>When the <strong>X</strong> button is pressed(when a <code>Toast</code> pool is used) an event(
-            <code>closeFeedback</code>) is triggered and the Application Controller should listen to this, so the toast can be closed within the controller.</p>
+            <code>closeFeedback</code>) is triggered and the Application Controller should listen to this, so the toast
+            can be closed within the controller.</p>
         <p>As for the alert it has auto-close feature but it can also be closed by clicking on it!</p>
     </psk-description>
     <psk-property-descriptor title="Supported properties">
-        <psk-list-feedbacks data-define-props="true" />
+        <psk-list-feedbacks data-define-props="true">
+        </psk-list-feedbacks>
     </psk-property-descriptor>
 
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-list-feedbacks data-define-controller="true" />
+        <psk-list-feedbacks data-define-controller="true">
+        </psk-list-feedbacks>
     </psk-controller-descriptor>
 
     <psk-chapter title="HTML Children">
@@ -40,7 +46,8 @@
             </psk-list-feedbacks>
         </psk-tag>
         <psk-tag title="Alert Renderer + styleCustomisation Example">
-            <psk-list-feedbacks messages-to-display={5} time-alive={5000} alert-renderer="my-alert-renderer" styleCustomisation="{{
+            <psk-list-feedbacks messages-to-display={5} time-alive={5000} alert-renderer="my-alert-renderer"
+                styleCustomisation="{{
                 toast: {
                     header: {
                         style:
