--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -5,13 +5,14 @@
     </psk-tag>
 
     <psk-example>
-        <psk-floating-menu>
+        <psk-floating-menu menuItems="[{label :orice,href: ceva}]">
         </psk-floating-menu>
     </psk-example>
     <psk-toc title="PSK - Floating Menu "></psk-toc>
 
     <psk-description>
-
+        <p>a</p>
+        <p>b</p>
     </psk-description>
 
 </psk-page>
