--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -4,8 +4,8 @@
         </psk-floating-menu>
     </psk-tag>
 
-    <psk-example>
-        <psk-floating-menu menuItems="[{label :orice,href: ceva}]">
+    <psk-example title="Floating menu example">
+        <psk-floating-menu menuItems="{[{label :'orice',href: 'ceva'}]}", opened="true">
         </psk-floating-menu>
     </psk-example>
     <psk-toc title="PSK - Floating Menu "></psk-toc>
