--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -19,11 +19,11 @@
     </psk-property-descriptor>
 
     <psk-example title="Floating menu example">
-        <psk-floating-menu opened="true" menuItems="[{
+        <psk-floating-menu opened="true" menuItems="{{[{
             'name': 'Feedback List',
             'icon': 'fa-cog',
             'path': 'list-feedbacks',
             'pageSrc': 'Components/psk-list-feedbacks/index.html'
-        }]">
+        }]}}">
         </psk-floating-menu>
 </psk-page>
