--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -4,26 +4,28 @@
         </psk-floating-menu>
     </psk-tag>
 
-    
+
     </psk-example>
     <psk-toc title="PSK - Floating Menu "></psk-toc>
 
     <psk-description>
-        <p>a</p>
-        <p>b</p>
+        <p>This component is providing the application navigation in a Floating Menu style.</p>
+        <p></p>
     </psk-description>
 
-    <psk-property-descriptor title= "Supported properties">
+    <psk-property-descriptor title="Supported properties">
         <psk-floating-menu data-define-props="true">
         </psk-floating-menu>
     </psk-property-descriptor>
 
-    <psk-example title="Floating menu example">
-        <psk-floating-menu opened="true" menuItems="{{[{
-            'name': 'Feedback List',
-            'icon': 'fa-cog',
-            'path': 'list-feedbacks',
-            'pageSrc': 'Components/psk-list-feedbacks/index.html'
-        }]}}">
-        </psk-floating-menu>
+    <psk-chapther title="Floating Menu code example">
+        <psk-tag>
+            <psk-floating-menu opened="true" menuItems="[{
+                    'name': 'Feedback List',
+                    'icon': 'fa-cog',
+                    'path': 'list-feedbacks',
+                    'pageSrc': 'Components/psk-list-feedbacks/index.html'
+                }]">
+            </psk-floating-menu>
+        </psk-tag>
 </psk-page>
