--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -5,12 +5,10 @@
     </psk-tag>
 
 
-    </psk-example>
     <psk-toc title="PSK - Floating Menu "></psk-toc>
 
     <psk-description>
         <p>This component is providing the application navigation in a Floating Menu style.</p>
-        <p></p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -28,4 +26,5 @@
                 }]">
             </psk-floating-menu>
         </psk-tag>
+    </psk-chapther>
 </psk-page>
