--- a/pages/Components/psk-floating-menu/index.html
+++ b/pages/Components/psk-floating-menu/index.html
@@ -16,7 +16,11 @@
         </psk-floating-menu>
     </psk-property-descriptor>
 
-    <psk-chapther title="Floating Menu code example">
+    <psk-chapter title="HTML Children">
+        <p>This component has no HTML children.</p>
+    </psk-chapter>
+
+    <psk-chapter title="Floating Menu code example">
         <psk-tag>
             <psk-floating-menu opened="true" menuItems="[{
                     'name': 'Feedback List',
@@ -26,5 +30,5 @@
                 }]">
             </psk-floating-menu>
         </psk-tag>
-    </psk-chapther>
+        </psk-chapther>
 </psk-page>
