--- a/themes/default/components/psk-list/psk-list.css
+++ b/themes/default/components/psk-list/psk-list.css
@@ -1,5 +1,5 @@
-@import url("/themes/default/assets/fonts/font-awesome.min.css");
-@import url("/themes/default/assets/bootstrap/css/bootstrap.min.css");
+@import url("../../../themes/default/assets/fonts/font-awesome.min.css");
+@import url("../../../themes/default/assets/bootstrap/css/bootstrap.min.css");
 * {
     outline: none !important;
 }
