updated default theme

--- a/themes/default/components/psk-menu-item-renderer/psk-menu-item-renderer.css
+++ b/themes/default/components/psk-menu-item-renderer/psk-menu-item-renderer.css
@@ -40,9 +40,12 @@ span.icon{
 }
 
 .children{
-  position:absolute;
-  top:56px;
-  left:0;
+  position: absolute;
+  top: 56px;
+  left: 0;
+  max-height: 400px;
+  overflow-x:auto ;
+  z-index: 200;
   display: none;
   background: #051130;
 }
