page layout update

--- a/themes/newlook/components/psk-page/psk-page.css
+++ b/themes/newlook/components/psk-page/psk-page.css
@@ -12,13 +12,12 @@
     
 }
 .page-content {
-    padding: 30px;
+    padding-top: 30px;
     color: #565656;
-}
-.page-content slot{
-    display: flex;
-    flex-direction: column;
-  
+    position: relative;
+    left: calc(50% - 17ch);
+    margin-left: -45ch;
+
 }
 
 nav {
