--- a/themes/newlook/components/psk-code/psk-code.css
+++ b/themes/newlook/components/psk-code/psk-code.css
@@ -70,7 +70,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  
  :not(pre)>code[class*="language-"],
  pre[class*="language-"] {
-     background: #f5f2f0;
+     background: #E8E8FF;
  }
  
  
@@ -90,7 +90,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  }
  
  .token.punctuation {
-     color: #999;
+     color: rgb(128, 128, 128);
  }
  
  .namespace {
@@ -113,7 +113,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  .token.char,
  .token.builtin,
  .token.inserted {
-     color: #690;
+     color: #006d4f;
  }
  
  .token.operator,
