--- a/themes/newlook/components/psk-img/psk-img.css
+++ b/themes/newlook/components/psk-img/psk-img.css
@@ -1,12 +1,11 @@
 
 .image_container {
     text-align: center;
-    margin-bottom: 20px;
-    width:85ch;
 }
 
 .image_description {
     text-align: center;
     padding: 10px;
     font-style: italic;
+    font-size:1rem;
 }
