--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -17,7 +17,7 @@
     padding:0;
 }
 
-.table-of-content .card-header h5{
+.table-of-content .psk-card .card-header h5{
     font-weight: bold;
     font-size:1.125rem;
     color:#354F9B;
