--- a/themes/newlook/components/psk-slideshow/psk-slideshow.css
+++ b/themes/newlook/components/psk-slideshow/psk-slideshow.css
@@ -12,7 +12,7 @@
 }
 
 #psk-slider {
-  background:#000;
+  background-color:#fff;
   height:100%;
   width:100%;
   margin:0 auto;
@@ -38,7 +38,7 @@
   position:absolute;
   list-style:none;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   left: 0;
   top: 0;
@@ -65,27 +65,35 @@
 .content{
   padding: 50px;
   z-index: 100;
-  background: rgba(64,83,115,0.5);
+  background: rgba(255,255,255,0.8);
+  display: flex;
   flex-direction: column;
+  box-shadow: 0px 10px 50px 2px #354F9B;
+
 }
+
 @media(max-width:960px){
   .content{
     padding: 5px;
     font-size: 70%;
+   
   }
 }
 .content .title{
-  font-size: 200%;
-  color: #FFF;
+  font-size: 175%;
+  color: #354F9B;
   text-align: center;
+  font-weight:bold;
 }
 .content .caption{
-  font-size: 120%;
-  color: #FFF;
+  font-size: 131%;
+  color: #565656;
   text-align: center;
 }
 .content .actions{
-  margin-top:20px;
+  margin-top:30px;
   text-align: center;
 }
+
+
 
