--- a/themes/newlook/components/psk-slideshow/psk-slideshow.css
+++ b/themes/newlook/components/psk-slideshow/psk-slideshow.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 .psk-slideshow-container {
   margin:0 auto;
   overflow:hidden;
@@ -26,22 +30,22 @@
 
 #psk-slider ul {
   margin:0;
-  padding:0;
   height:100%;
   width: 100%;
   position:relative;
+  padding:20px;
 }
 
 #psk-slider li {
   width:100%;
-  height:100%;
+  height:250px;
   position:absolute;
   list-style:none;
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center center;
+  background-position: center;
   left: 0;
-  top: 0;
+  top: 5%;
   opacity: 0;
   animation-name: fade;
   animation-iteration-count: infinite;
@@ -59,26 +63,34 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding-top:250px;
 }
 
 .content{
-  padding: 50px;
+  height:100%;
   z-index: 100;
-  background: rgba(255,255,255,0.8);
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 10px 50px 2px #354F9B;
+  justify-content: center;
+  padding:0 40px;
 
 }
 
 @media(max-width:960px){
   .content{
     padding: 5px;
-    font-size: 70%;
+    font-size: 60%;
    
   }
 }
+
+@media(max-width:1200px){
+  .content{
+    font-size: 90%;
+   
+  }
+}
+
 .content .title{
   font-size: 175%;
   color: #354F9B;
