--- a/themes/newlook/components/psk-slideshow/psk-slideshow.css
+++ b/themes/newlook/components/psk-slideshow/psk-slideshow.css
@@ -38,7 +38,7 @@
 
 #psk-slider li {
   width:100%;
-  height:250px;
+  height:100%;
   position:absolute;
   list-style:none;
   background-repeat: no-repeat;
@@ -63,30 +63,27 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-top:250px;
+  justify-content: center;
+
+ 
 }
 
 .content{
-  height:100%;
   z-index: 100;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding:0 40px;
+  padding:40px;
+  background-color:rgb(255,255,255);
+  margin:0 40px;
+  box-shadow: rgba(76, 113, 222, 0.5) 0px 30px 30px 10px;
 
 }
 
 @media(max-width:960px){
   .content{
     padding: 5px;
-    font-size: 60%;
-   
-  }
-}
-
-@media(max-width:1200px){
-  .content{
-    font-size: 90%;
+    font-size: 80%;
    
   }
 }
@@ -94,16 +91,20 @@
 .content .title{
   font-size: 175%;
   color: #354F9B;
-  text-align: center;
   font-weight:bold;
 }
 .content .caption{
   font-size: 131%;
   color: #565656;
-  text-align: center;
+
 }
 .content .actions{
   margin-top:30px;
+  margin-bottom:30px;
+  
+}
+.content>*{
+  padding: 10px 0px;
   text-align: center;
 }
 
